# law_translation

./: .gitignore  README.md  config.toml  pyproject.toml
src/: __init__.py  cli.py  ollama.py  parser.py  prompting.py  translator.py  validation.py
src/law_translation/: __init__.py  cli.py  prompting.py  retrieval.py  translator.py  validation.py
src/law_translation/prompts/: prompt.md
