[project]
name = "law-translation"
version = "0.1.0"
description = "Traffic law retrieval and parsing pipeline."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
law-translation = "law_translation.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
