[project]
name = "law-translation"
version = "0.1.0"
description = "Traffic law retrieval and parsing pipeline."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
law-translation = "cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = [
    "cli",
    "ollama",
    "parser",
    "prompting",
    "retrieval",
    "translator",
    "validation",
]

[tool.setuptools.package-dir]
"" = "src"
